# ros_lidar_recorder

./: .gitignore  CMakeLists.txt  README.md  package.xml
.doc/: ros_lidar_recorder.drawio
include/ros_lidar_recorder/: recorder.hpp
node/: recorder_auto_node.cpp  recorder_event_node.cpp
src/: recorder.cpp
